# mprpc

./: .gitignore  CMakeLists.txt  README.md  auto_build.sh  auto_clean.sh
example/: CMakeLists.txt  gen-proto.sh  user.grpc.pb.cc  user.grpc.pb.h  user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  UserService.cc
example/caller/: CMakeLists.txt  CallGetFriends.h  CallLogin.h  CallRegister.h  CallUserService.cc
src/: CMakeLists.txt  Config.cc  Loggers.cc  MprpcApplication.cc  MprpcChannel.cc  MprpcController.cc  MprpcProvider.cc  RpcProvider.cc  ZKClient.cc  rpcheader.pb.cc
src/include/: Config.h  Defer.h  LogQueue.h  Loggers.h  MprpcApplication.h  MprpcChannel.h  MprpcController.h  MprpcProvider.h  RpcProvider.h  ZKClient.h  rpcheader.pb.h  rpcheader.proto
test/: CMakeLists.txt  main.cpp
test/protobuf/: gen-grpc.sh  test.grpc.pb.cc  test.grpc.pb.h  test.pb.cc  test.pb.h  test.proto
